--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,15 @@ h5,
 h6 {
     font-family: "Playfair Display SC", serif;
 }
+
+.header {
+    background: url(../img/bird-of-paradise.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    min-height: 600px;
+}
+
+.jumbotron {
+    background: white;
+}
